Criando a parte fantasma da página

--- a/css/base.css
+++ b/css/base.css
@@ -54,7 +54,7 @@ p {
     font-size: 1.8em;
     font-family: "VT323", serif;
     font-style: normal;
-    color: #b2aeae;
+    color: #d3d3d3;
 }
 
 /* ============ main ================== */
