--- a/css/base.css
+++ b/css/base.css
@@ -30,7 +30,8 @@ li .menu-item {
 
 
 .menu-item:hover {
-    text-decoration: underline;
+    /* text-decoration: underline; */
+    text-shadow: 2px 2px 2px #69c;
     color: #fff;
 }
 
@@ -41,6 +42,8 @@ li .menu-item {
     flex-direction: column;
     padding-top: 160px;
 }
+
+
 
 h2 {
     font-size: 5em;
