--- a/css/projetos/musica_01.css
+++ b/css/projetos/musica_01.css
@@ -36,8 +36,8 @@
 
 .layout {
     border: 1px solid rgb(0, 128, 255);
-    width: 1200px;
-    height: 950px;
+    width: 1300px;
+    height: 990px;
     border-radius: 30px;
 }
 
@@ -142,7 +142,7 @@ tr {
 
 td {
     font-family: "Geist Mono", serif;
-    font-size: .8em;
+    font-size: 1em;
     color: #bbb;
 }
 
